--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,6 +23,7 @@ jobs:
             --build-arg NGINX_UNIT_VERSION=1.18.0 \
             --build-arg KANBOARD_VERSION=v1.2.15 \
             --tag "${USERNAME}/kanboard:v1.2.15" \
+            --tag "${USERNAME}/kanboard:v1.2.15_php-7.4.7_unit-1.18.0" \
             --tag "${USERNAME}/kanboard:latest"
 
       - name: Push Kanboard Docker Image to Docker Hub
@@ -34,5 +35,6 @@ jobs:
         run: |
           docker login -u ${USERNAME} -p ${DOCKER_HUB_TOKEN}
           docker push "${USERNAME}/kanboard:v1.2.15"
+          docker push "${USERNAME}/kanboard:v1.2.15_php-7.4.7_unit-1.18.0"
           docker push "${USERNAME}/kanboard:latest"
           docker logout
