Added tagging and image push for GitHub Docker registry

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,11 +22,14 @@ jobs:
             --build-arg PHP_VERSION=7.4.7 \
             --build-arg NGINX_UNIT_VERSION=1.18.0 \
             --build-arg KANBOARD_VERSION=v1.2.15 \
+            --tag docker.pkg.github.com/${USERNAME}/docker-kanboard/kanboard:v1.2.15 \
+            --tag docker.pkg.github.com/${USERNAME}/docker-kanboard/kanboard:v1.2.15_php-7.4.7_unit-1.18.0 \
+            --tag docker.pkg.github.com/${USERNAME}/docker-kanboard/kanboard:latest \
             --tag "${USERNAME}/kanboard:v1.2.15" \
             --tag "${USERNAME}/kanboard:v1.2.15_php-7.4.7_unit-1.18.0" \
             --tag "${USERNAME}/kanboard:latest"
 
-      - name: Push Kanboard Docker Image to Docker Hub
+      - name: Push Kanboard Docker Image to Docker Hub and GitHub Registries
         shell: bash
         env:
           USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
@@ -37,4 +40,9 @@ jobs:
           docker push "${USERNAME}/kanboard:v1.2.15"
           docker push "${USERNAME}/kanboard:v1.2.15_php-7.4.7_unit-1.18.0"
           docker push "${USERNAME}/kanboard:latest"
+          docker logout
+          docker login docker.pkg.github.com -u ${USERNAME} -p ${DOCKER_GITHUB_TOKEN}
+          docker push "docker.pkg.github.com/${USERNAME}/docker-kanboard/kanboard:v1.2.15"
+          docker push "docker.pkg.github.com/${USERNAME}/docker-kanboard/kanboard:v1.2.15_php-7.4.7_unit-1.18.0"
+          docker push "docker.pkg.github.com/${USERNAME}/docker-kanboard/kanboard:latest"
           docker logout
